fix graph-mob height, fix desktop trade-history scroll wrap height
(cherry picked from commit 70406b7)

--- a/src/app/dashboard/graph/graph.component.scss
+++ b/src/app/dashboard/graph/graph.component.scss
@@ -3,7 +3,7 @@
 }
 
 .amcharts-stock_chart_div {
-  height: calc(100% - 85px);
+  height: calc(100% - 40px);
   overflow: hidden;
   @media (min-width: 1200px) { 
     height: 100%;
